# server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  deny.toml  diesel.toml  docker-compose.yml
crates/nvisy-cli/: Cargo.toml  README.md
crates/nvisy-cli/src/: main.rs
crates/nvisy-cli/src/config/: middleware.rs  mod.rs  provider.rs  server.rs  service.rs  telemetry.rs  webhook.rs
crates/nvisy-cli/src/server/: error.rs  http_server.rs  https_server.rs  lifecycle.rs  mod.rs  shutdown.rs
crates/nvisy-cli/src/telemetry/: context.rs  helpers.rs  mod.rs  reports.rs  tracing.rs
crates/nvisy-core/: Cargo.toml  README.md
crates/nvisy-core/src/: error.rs  health.rs  lib.rs  prelude.rs  provider.rs  services.rs
crates/nvisy-core/src/common/: mod.rs  provider.rs  timing.rs
crates/nvisy-core/src/crypto/: cipher.rs  key.rs  mod.rs
crates/nvisy-core/src/emb/: context.rs  error.rs  mod.rs  request.rs  response.rs  service.rs
crates/nvisy-core/src/fs/: content_file.rs  content_handler.rs  content_kind.rs  content_metadata.rs  content_registry.rs  mod.rs
crates/nvisy-core/src/io/: content.rs  content_data.rs  content_read.rs  content_write.rs  data_reference.rs  mod.rs
crates/nvisy-core/src/mock/: mod.rs
crates/nvisy-core/src/ocr/: context.rs  error.rs  mod.rs  request.rs  response.rs  service.rs
crates/nvisy-core/src/path/: mod.rs  source.rs
crates/nvisy-core/src/types/: annotation.rs  content.rs  context.rs  document.rs  health.rs  message.rs  mod.rs
crates/nvisy-core/src/vlm/: context.rs  error.rs  mod.rs  request.rs  response.rs  service.rs  tools.rs
crates/nvisy-dal/: Cargo.toml  README.md
crates/nvisy-dal/src/: error.rs  lib.rs
crates/nvisy-dal/src/core/: context.rs  contexts.rs  datatypes.rs  input_stream.rs  mod.rs  object_context.rs  output_stream.rs  params.rs  relational_context.rs  stream.rs  streams.rs  vector_context.rs
crates/nvisy-dal/src/datatype/: blob.rs  document.rs  embedding.rs  graph.rs  message.rs  mod.rs  object.rs  record.rs
crates/nvisy-dal/src/provider/: config.rs  milvus.rs  mod.rs  pinecone.rs  postgres.rs  qdrant.rs  s3.rs  weaviate.rs
crates/nvisy-dal/src/python/: error.rs  loader.rs  mod.rs  provider.rs
crates/nvisy-dal/src/runtime/: loader.rs  provider.rs
crates/nvisy-inference/: Cargo.toml  README.md
crates/nvisy-inference/src/: annotation.rs  content.rs  context.rs  document.rs  lib.rs  message.rs  service.rs
crates/nvisy-inference/src/embedding/: mod.rs  request.rs  response.rs
crates/nvisy-inference/src/language/: mod.rs  request.rs  response.rs
crates/nvisy-inference/src/optical/: mod.rs  request.rs  response.rs
crates/nvisy-inference/src/service/: context.rs  inference.rs  mod.rs
crates/nvisy-inference/src/types/: annotation.rs  content.rs  document.rs  message.rs  mod.rs
crates/nvisy-minio/: Cargo.toml  README.md
crates/nvisy-minio/src/: lib.rs
crates/nvisy-minio/src/client/: minio_client.rs  minio_config.rs  minio_credentials.rs  mod.rs
crates/nvisy-minio/src/operations/: bucket_operations.rs  custom_hooks.rs  mod.rs  object_operations.rs  observability.rs
crates/nvisy-minio/src/types/: bucket_info.rs  download_context.rs  mod.rs  object_info.rs  object_key.rs  object_metadata.rs  object_stage.rs  object_tags.rs  upload_context.rs
crates/nvisy-nats/: Cargo.toml  README.md
crates/nvisy-nats/src/: error.rs  lib.rs  prelude.rs  retry.rs
crates/nvisy-nats/src/client/: client.rs  config.rs  credentials.rs  health.rs  mod.rs  nats_client.rs  nats_config.rs
crates/nvisy-nats/src/kv/: api_token.rs  api_token_store.rs  cache.rs  chat_history.rs  kv_bucket.rs  kv_key.rs  kv_store.rs  mod.rs  session.rs  store.rs
crates/nvisy-nats/src/object/: avatar_bucket.rs  avatar_key.rs  avatar_store.rs  content_data.rs  content_source.rs  document_bucket.rs  document_key.rs  document_store.rs  hashing_reader.rs  mod.rs  object_bucket.rs  object_data.rs  object_headers.rs  object_key.rs  (+7 more)
crates/nvisy-object/: Cargo.toml  README.md
crates/nvisy-object/src/: lib.rs  prelude.rs
crates/nvisy-ollama/: Cargo.toml  README.md
crates/nvisy-ollama/src/: error.rs  lib.rs  prelude.rs  provider.rs
crates/nvisy-olmocr2/: Cargo.toml  README.md
crates/nvisy-olmocr2/src/: error.rs  lib.rs  prelude.rs
crates/nvisy-opendal/: Cargo.toml  README.md
crates/nvisy-opendal/src/: backend.rs  config.rs  error.rs  lib.rs  prelude.rs
crates/nvisy-openrouter/: Cargo.toml  README.md
crates/nvisy-openrouter/src/: lib.rs
crates/nvisy-paddle/: Cargo.toml  README.md
crates/nvisy-paddle/src/: lib.rs
crates/nvisy-portkey/: Cargo.toml  README.md
crates/nvisy-portkey/src/: error.rs  lib.rs  prelude.rs
crates/nvisy-postgres/: Cargo.toml  README.md  build.rs
crates/nvisy-postgres/src/: error.rs  lib.rs  prelude.rs  schema.rs
crates/nvisy-qdrant/: Cargo.toml  README.md
crates/nvisy-qdrant/src/: error.rs  lib.rs  manager.rs  prelude.rs  search.rs
crates/nvisy-reqwest/: Cargo.toml  README.md
crates/nvisy-reqwest/src/: client.rs  config.rs  error.rs  lib.rs  webhook.rs
crates/nvisy-rig/: Cargo.toml  README.md
crates/nvisy-rig/src/: error.rs  lib.rs
crates/nvisy-runtime/: Cargo.toml  README.md
crates/nvisy-runtime/src/: archive.rs  error.rs  lib.rs  prelude.rs  service.rs
crates/nvisy-runtime/stream/: event_sub.rs  mod.rs  stream_sub.rs
crates/nvisy-server/: Cargo.toml  README.md
crates/nvisy-server/src/: error.rs  lib.rs  prelude.rs
crates/nvisy-service/: Cargo.toml  README.md
crates/nvisy-service/src/: error.rs  lib.rs  prelude.rs
crates/nvisy-test/: Cargo.toml  README.md
crates/nvisy-test/src/: lib.rs
crates/nvisy-vector/: Cargo.toml  README.md
crates/nvisy-vector/src/: config.rs  lib.rs
crates/nvisy-webhook/: Cargo.toml  README.md
crates/nvisy-webhook/src/: error.rs  health.rs  lib.rs  request.rs  service.rs
crates/nvisy-worker/: Cargo.toml  README.md
crates/nvisy-worker/src/: lib.rs
integrations/nvisy-data/: Cargo.toml
integrations/nvisy-data/src/: error.rs  input.rs  types.rs  vector.rs
(+1075 files in other folders)
