# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/nvisy-cli",
    "./crates/nvisy-core",
    "./crates/nvisy-dal",
    "./crates/nvisy-nats",
    "./crates/nvisy-postgres",
    "./crates/nvisy-rig",
    "./crates/nvisy-runtime",
    "./crates/nvisy-server",
    "./crates/nvisy-webhook",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT"
publish = false

authors = ["nvisy <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/server"
homepage = "https://github.com/nvisycom/server"
documentation = "https://docs.rs/nvisy-server"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329

# Internal crates
nvisy-core = { path = "./crates/nvisy-core", version = "0.1.0" }
nvisy-dal = { path = "./crates/nvisy-dal", version = "0.1.0" }
nvisy-nats = { path = "./crates/nvisy-nats", version = "0.1.0" }
nvisy-postgres = { path = "./crates/nvisy-postgres", version = "0.1.0" }
nvisy-rig = { path = "./crates/nvisy-rig", version = "0.1.0" }
nvisy-runtime = { path = "./crates/nvisy-runtime", version = "0.1.0" }
nvisy-server = { path = "./crates/nvisy-server", version = "0.1.0" }
nvisy-webhook = { path = "./crates/nvisy-webhook", version = "0.1.0" }

# Runtime crates (from github.com/nvisycom/runtime)
nvisy-rt-archive = { git = "https://github.com/nvisycom/runtime.git", branch = "feature/prerelease", version = "0.1.0" }
nvisy-rt-core = { git = "https://github.com/nvisycom/runtime.git", branch = "feature/prerelease", version = "0.1.0" }
nvisy-rt-document = { git = "https://github.com/nvisycom/runtime.git", branch = "feature/prerelease", version = "0.1.0" }
nvisy-rt-engine = { git = "https://github.com/nvisycom/runtime.git", branch = "feature/prerelease", version = "0.1.0" }

# CLI
clap = { version = "4.5", features = [] }

# Async runtime
tokio = { version = "1.49", features = [] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = [] }
futures = { version = "0.3", features = [] }
futures-util = { version = "0.3", features = [] }
async-stream = { version = "0.3", features = [] }
async-trait = { version = "0.1", features = [] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# HTTP server
axum = { version = "0.8", features = [] }
axum-client-ip = { version = "1.3", features = ["serde"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = [] }
axum-test = { version = "18.6", features = [] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# OpenAPI/Documentation
aide = { version = "0.15", features = ["axum", "macros", "scalar"] }
schemars = { version = "0.9", features = ["uuid1", "jiff02"] }
jsonschema = { version = "0.29", features = [] }

# Authentication & Security
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
argon2 = { version = "0.6.0-rc.6", features = ["password-hash", "rand_core"] }
base64 = { version = "0.22", features = [] }
rand = { version = "0.10.0-rc.8", features = ["serde"] }
sha2 = { version = "0.10", features = [] }
hmac = { version = "0.12", features = [] }
hex = { version = "0.4", features = [] }
zxcvbn = { version = "3.1", features = ["serde"] }

# Relational database (Postgres)
diesel = { version = "2.3", features = [] }
diesel_migrations = { version = "2.3", features = [] }
diesel-async = { version = "0.7", features = [] }
diesel-derive-enum = { version = "2.1", features = [] }
deadpool = { version = "0.12", features = [] }
pgvector = { version = "0.4", features = [] }
pgtrgm = { version = "0.4", features = [] }

# Messaging and object storage (NATS)
async-nats = { version = "0.45", features = [] }

# Observability
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = [] }

# Testing utilities
tempfile = { version = "3.23", features = [] }
dotenvy = { version = "0.15", features = [] }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
validator = { version = "0.20", features = ["derive"] }

# Derive macros & utilities
thiserror = { version = "2.0", features = [] }
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2.0", features = [] }
derive_builder = { version = "0.20", features = [] }
anyhow = { version = "1.0", features = [] }
pin-project-lite = { version = "0.2", features = [] }

# Data types
jiff = { version = "0.2", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = [] }
uuid = { version = "1.20", features = ["serde", "v4", "v7"] }
ipnet = { version = "2.11", features = [] }
bigdecimal = { version = "0.4", features = ["serde"] }
bytes = { version = "1.10", features = ["serde"] }
petgraph = { version = "0.8", features = ["serde-1"] }
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.5", features = [] }

# Text processing
regex = { version = "1.0", features = [] }
text-splitter = { version = "0.29", features = [] }
woothee = { version = "0.13", features = [] }

# AI/ML frameworks
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls"] }


# Python interop
pyo3 = { version = "0.27", features = [] }
pyo3-async-runtimes = { version = "0.27", features = [] }
