# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/nvisy-cli",
    "./crates/nvisy-nats",
    "./crates/nvisy-object",
    "./crates/nvisy-postgres",
    "./crates/nvisy-server",
    "./crates/nvisy-webhook",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
license = "MIT"
publish = false

authors = ["nvisy <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/server"
homepage = "https://github.com/nvisycom/server"
documentation = "https://docs.rs/nvisy-server"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329

# Internal crates
nvisy-nats = { path = "./crates/nvisy-nats", version = "0.1.0" }
nvisy-object = { path = "./crates/nvisy-object", version = "0.1.0" }
nvisy-postgres = { path = "./crates/nvisy-postgres", version = "0.1.0" }
nvisy-server = { path = "./crates/nvisy-server", version = "0.1.0" }
nvisy-webhook = { path = "./crates/nvisy-webhook", version = "0.1.0" }

# CLI
clap = { version = "4.5", features = [] }

# Async runtime
tokio = { version = "1.49", features = [] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = [] }
futures = { version = "0.3", features = [] }
futures-util = { version = "0.3", features = [] }
async-stream = { version = "0.3", features = [] }
async-trait = { version = "0.1", features = [] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# HTTP server
axum = { version = "0.8", features = [] }
axum-client-ip = { version = "1.3", features = ["serde"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = [] }
axum-test = { version = "18.6", features = [] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# OpenAPI/Documentation
aide = { version = "0.15", features = ["axum", "macros", "scalar"] }
schemars = { version = "1.2", features = ["uuid1", "jiff02"] }
jsonschema = { version = "0.29", features = [] }

# Authentication
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
argon2 = { version = "0.6.0-rc.5", features = ["password-hash", "rand_core"] }
zxcvbn = { version = "3.1", features = ["serde"] }

# Encryption & Cryptography
chacha20poly1305 = { version = "0.10", features = [] }
hkdf = { version = "0.12", features = [] }
sha2 = { version = "0.10", features = [] }
hmac = { version = "0.12", features = [] }

# Encoding
base64 = { version = "0.22", features = [] }
hex = { version = "0.4", features = [] }
hipstr = { version = "0.8", features = [] }

# Randomness
rand = { version = "0.10.0-rc.6", features = ["serde"] }

# Relational database (Postgres)
diesel = { version = "2.3", features = [] }
diesel_migrations = { version = "2.3", features = [] }
diesel-async = { version = "0.7", features = [] }
jiff-diesel = { version = "0.1.3", features = [] }
diesel-derive-enum = { version = "2.1", features = [] }
deadpool = { version = "0.12", features = [] }
pgvector = { version = "0.4", features = [] }
pgtrgm = { version = "0.4", features = [] }

# Messaging and object storage (NATS)
async-nats = { version = "0.46", features = [] }

# Cloud object storage
object_store = { version = "0.12", features = [] }

# Observability
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = [] }

# Testing utilities
tempfile = { version = "3.25", features = [] }
dotenvy = { version = "0.15", features = [] }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
validator = { version = "0.20", features = ["derive"] }

# Derive macros & utilities
thiserror = { version = "2.0", features = [] }
strum = { version = "0.28", features = ["derive"] }
derive_more = { version = "2.0", features = [] }
derive_builder = { version = "0.20", features = [] }
anyhow = { version = "1.0", features = [] }
pin-project-lite = { version = "0.2", features = [] }

# Primitive datatypes
uuid = { version = "1.20", features = ["serde", "v4", "v7"] }
bytes = { version = "1.10", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }

# Domain datatypes & data structures
ipnet = { version = "2.11", features = [] }
url = { version = "2.5", features = [] }
semver = { version = "1.0", features = ["serde"] }

# Text processing
regex = { version = "1.0", features = [] }
woothee = { version = "0.13", features = [] }
