# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-cli"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# TLS support: enables HTTPS with rustls for secure connections
tls = ["axum-server"]

# OpenTelemetry support: enables environment-based log filtering
otel = ["tracing-subscriber/env-filter"]

# Dotenv support: loads environment variables from .env files
# This allows configuration via .env files in addition to CLI args
dotenv = ["dep:dotenvy"]

# AI service backends for embeddings, OCRs, and VLMs
mock = ["nvisy-core/test-utils", "nvisy-core/config"]
ollama = ["dep:nvisy-ollama"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }
nvisy-nats = { workspace = true, features = ["config"] }
nvisy-postgres = { workspace = true, features = ["config"] }
nvisy-server = { workspace = true, features = ["config"] }

# AI service backends (optional)
nvisy-ollama = { workspace = true, features = ["config"], optional = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

# HTTP server
axum = { workspace = true, features = ["http2", "macros"] }
axum-server = { workspace = true, features = ["tls-rustls"], optional = true }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Observability
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi", "json", "env-filter"] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true, features = [] }

# Environment
dotenvy = { workspace = true, optional = true }
