[package]
name = "nvisy-core"
description = "Core types and utilities shared across nvisy crates"
readme = "./README.md"
keywords = ["core", "types", "error", "utilities", "nvisy"]
categories = ["rust-patterns", "development-tools"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support for API documentation
schema = ["dep:schemars"]

# Encryption support for sensitive data
encryption = ["dep:chacha20poly1305", "dep:hkdf", "dep:rand"]

[dependencies]
# Async runtime
async-trait = { workspace = true, features = [] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
strum = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["as_ref", "deref"] }

# String types
hipstr = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Encoding
bytes = { workspace = true, features = [] }
hex = { workspace = true, features = [] }

# Datatypes
jiff = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v7"] }

# OpenAPI documentation (optional)
schemars = { workspace = true, optional = true, features = [] }

# Hashing
sha2 = { workspace = true, features = [] }

# Encryption (optional)
chacha20poly1305 = { workspace = true, optional = true, features = [] }
hkdf = { workspace = true, optional = true, features = [] }
rand = { workspace = true, optional = true, features = [] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
