[package]
name = "nvisy-core"
description = "Shared foundation types for nvisy services"
readme = "./README.md"
keywords = ["nvisy", "core", "error", "foundation"]
categories = ["rust-patterns"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on core types
# This allows core types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

[dependencies]
# Async runtime
async-trait = { workspace = true }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, optional = true }
