# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-dal"
description = "Data abstraction layer for workflow inputs and outputs"
readme = "./README.md"
keywords = ["dal", "storage", "database", "vector", "workflow"]
categories = ["database", "api-bindings"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true, features = [] }

# Async runtime
tokio = { workspace = true, features = ["rt", "sync"] }
futures = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
async-trait = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["from"] }
thiserror = { workspace = true, features = [] }

# Data types
bytes = { workspace = true, features = [] }
uuid = { workspace = true, features = ["v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }

# Python interop
pyo3 = { workspace = true, features = ["auto-initialize"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
async-stream = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
