[package]
name = "nvisy-inference"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# CLI configuration support: enables clap derives for config types
config = ["dep:clap"]

# JSON Schema support for API documentation
schema = ["dep:schemars", "nvisy-core/schema"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["macros", "time", "sync"] }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Macros and utilities
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["from", "into"] }

# Observability
tracing = { workspace = true }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

# OpenAPI documentation (optional)
schemars = { workspace = true, optional = true }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }

# Commonly used datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
bytes = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
