# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-minio"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
# Internal
nvisy-core = { workspace = true, features = ["serde"] }

# Async runtime
futures = { workspace = true, features = [] }

# File storage
minio = { workspace = true, features = ["rustls-tls"] }



# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }

# Data types
time = { workspace = true, features = ["serde", "formatting", "parsing", "macros"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
bytes = { workspace = true, features = ["serde"] }
mime = { workspace = true, features = [] }
url = { workspace = true, features = [] }
