# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-nats"
description = "Task-focused NATS client for the Nvisy platform with comprehensive JetStream support"
readme = "./README.md"
keywords = ["nats", "messaging", "jetstream", "pubsub", "streaming"]
categories = ["network-programming", "api-bindings"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on Nats types
# This allows Nats types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

# CLI configuration support: enables clap derives for config types
# This allows config types to be used with command-line argument parsing
config = ["dep:clap"]

[dependencies]
# NATS messaging client
async-nats = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
pin-project-lite = { workspace = true, features = [] }
futures = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into", "display"] }

# Data types
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }

# Cryptography
sha2 = { workspace = true, features = [] }
hex = { workspace = true, features = [] }
base64 = { workspace = true, features = [] }

# JSON schema generation (Optional)
schemars = { workspace = true, features = [], optional = true }

# CLI (Optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
